Add deletion of a record
